@@ -1,5 +1,14 @@
 2002-05-10  Seth Nickell  <snickell@stanford.edu>
 
+	* gnome-window-properties.c: (set_wm_change_pending),
+	(state_changed), (create_dialog):
+	* gnome-window-properties.glade:
+
+	Make the glade file look a little bit better, hide the property widgets when
+	there is a window manager change pending.
+
+2002-05-10  Seth Nickell  <snickell@stanford.edu>
+
 	* .cvsignore:
 	* Makefile.am:
 	* gnome-window-properties.c: (wm_selection_changed),
